# spark-note-poc

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  test_output.txt
.github/workflows/: ci.yml
examples/web-demo/: index.html  package-lock.json  vite.config.ts
examples/web-demo/public/wasm/: spark_note_core.d.ts  spark_note_core.js  spark_note_core_bg.wasm  spark_note_core_bg.wasm.d.ts
examples/web-demo/src/: App.css  App.tsx  index.css  vite-env.d.ts
examples/web-demo/src/components/: Badge.css  Badge.tsx  Button.css  Button.tsx  Card.css  Card.tsx  CodeBlock.css  CodeBlock.tsx  ErrorBoundary.tsx  Input.css  Input.tsx  Toast.css  Toast.tsx  WorkflowProgress.css  WorkflowProgress.tsx  index.ts
examples/web-demo/src/hooks/: useToast.ts
examples/web-demo/src/styles/: base.css  tokens.css
proptest-regressions/: note_prop_test.txt
spark-note-core/: Cargo.toml  build_wasm.sh
spark-note-core/contracts/: nullifier_registry.mligo
spark-note-core/examples/: ghostnet_demo.rs
spark-note-core/src/: crypto.rs  lib.rs  manager.rs  note.rs  note_prop_test.rs  nullifier.rs  serialization.rs  tezos.rs  wasm.rs
spark-note-sdk/: Cargo.toml  build_wasm.sh
spark-note-sdk/contracts/: nullifier_registry.mligo
spark-note-sdk/proptest-regressions/: note_prop_test.txt
spark-note-sdk/src/: crypto.rs  error.rs  lib.rs  note.rs  nullifier.rs  tezos.rs
src/: crypto.rs  error.rs  lib.rs  note.rs  note_prop_test.rs  nullifier.rs  wasm.rs
